# jsonite-daemon

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  calculator_introspect.xml  widget_introspect.xml
.github/ISSUE_TEMPLATE/: bug_report.md
include/: gdbus_calculator.h  gdbus_widget.h  jsonite_calculator.h  jsonite_widget.h
src/: gdbus_calculator.c  gdbus_widget.c  jsonite_calculator.c  jsonite_widget.c  main.c
